--- a/PicnicViewController.xib
+++ b/PicnicViewController.xib
@@ -45,7 +45,7 @@
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1004713950"/>
+						<reference key="NSNextKeyView" ref="471948217"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -64,44 +64,6 @@
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">happyNewYear.png</string>
-						</object>
-					</object>
-					<object class="IBUIImageView" id="1004713950">
-						<reference key="NSNextResponder" ref="774585933"/>
-						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 258}</string>
-						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="471948217"/>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC41MDE5NjA4MTQgMSAwIDAAA</bytes>
-						</object>
-						<int key="IBUIContentMode">5</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">fabric_top.png</string>
-						</object>
-					</object>
-					<object class="IBUIImageView" id="79977296">
-						<reference key="NSNextResponder" ref="774585933"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 232}, {320, 230}}</string>
-						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="737525431"/>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC44MDAwMDAwMTE5IDAuNDAwMDAwMDA2IDEgMAA</bytes>
-						</object>
-						<int key="IBUIContentMode">6</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">fabric_bottom.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="471948217">
@@ -129,7 +91,7 @@
 						<string key="NSFrame">{{0, 223}, {320, 237}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="79977296"/>
+						<reference key="NSNextKeyView" ref="737525431"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDEgMAA</bytes>
@@ -188,27 +150,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">napkinBottom</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="79977296"/>
-					</object>
-					<int key="connectionID">18</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">napkinTop</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1004713950"/>
-					</object>
-					<int key="connectionID">19</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bug</string>
+						<string key="label">newyearLogo</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="737525431"/>
 					</object>
-					<int key="connectionID">22</int>
+					<int key="connectionID">24</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -240,8 +186,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="471948217"/>
 							<reference ref="757294377"/>
-							<reference ref="79977296"/>
-							<reference ref="1004713950"/>
 							<reference ref="591529228"/>
 							<reference ref="737525431"/>
 						</object>
@@ -260,18 +204,6 @@
 						<string key="objectName">Basket Top</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">17</int>
-						<reference key="object" ref="79977296"/>
-						<reference key="parent" ref="774585933"/>
-						<string key="objectName">Napkin Bottom</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">16</int>
-						<reference key="object" ref="1004713950"/>
-						<reference key="parent" ref="774585933"/>
-						<string key="objectName">Napkin Top</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
 						<reference key="object" ref="591529228"/>
 						<reference key="parent" ref="774585933"/>
@@ -281,7 +213,7 @@
 						<int key="objectID">21</int>
 						<reference key="object" ref="737525431"/>
 						<reference key="parent" ref="774585933"/>
-						<string key="objectName">happyNewYear</string>
+						<string key="objectName">Newyear Logo</string>
 					</object>
 				</object>
 			</object>
@@ -293,8 +225,6 @@
 					<string>-1.IBPluginDependency</string>
 					<string>-2.CustomClassName</string>
 					<string>-2.IBPluginDependency</string>
-					<string>16.IBPluginDependency</string>
-					<string>17.IBPluginDependency</string>
 					<string>20.IBPluginDependency</string>
 					<string>21.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
@@ -306,8 +236,6 @@
 					<string>PicnicViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -328,7 +256,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">22</int>
+			<int key="maxID">24</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -342,14 +270,10 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>basketBottom</string>
 							<string>basketTop</string>
-							<string>bug</string>
-							<string>napkinBottom</string>
-							<string>napkinTop</string>
+							<string>newyearLogo</string>
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIImageView</string>
-							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
@@ -361,9 +285,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>basketBottom</string>
 							<string>basketTop</string>
-							<string>bug</string>
-							<string>napkinBottom</string>
-							<string>napkinTop</string>
+							<string>newyearLogo</string>
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -376,15 +298,7 @@
 								<string key="candidateClassName">UIImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">bug</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">napkinBottom</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">napkinTop</string>
+								<string key="name">newyearLogo</string>
 								<string key="candidateClassName">UIImageView</string>
 							</object>
 						</object>
@@ -414,8 +328,6 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>door_bottom.png</string>
 				<string>door_top.png</string>
-				<string>fabric_bottom.png</string>
-				<string>fabric_top.png</string>
 				<string>happyNewYear.png</string>
 				<string>painting.png</string>
 			</object>
@@ -423,8 +335,6 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{320, 235}</string>
 				<string>{320, 266}</string>
-				<string>{320, 260}</string>
-				<string>{320, 260}</string>
 				<string>{250, 156}</string>
 				<string>{266, 560}</string>
 			</object>
