--- a/PicnicViewController.xib
+++ b/PicnicViewController.xib
@@ -45,7 +45,7 @@
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="471948217"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -91,7 +91,7 @@
 						<string key="NSFrame">{{0, 223}, {320, 237}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="737525431"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDEgMAA</bytes>
@@ -150,11 +150,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bug</string>
+						<string key="label">newyearLogo</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="737525431"/>
 					</object>
-					<int key="connectionID">22</int>
+					<int key="connectionID">24</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -213,7 +213,7 @@
 						<int key="objectID">21</int>
 						<reference key="object" ref="737525431"/>
 						<reference key="parent" ref="774585933"/>
-						<string key="objectName">happyNewYear</string>
+						<string key="objectName">Newyear Logo</string>
 					</object>
 				</object>
 			</object>
@@ -256,7 +256,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">22</int>
+			<int key="maxID">24</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -270,12 +270,10 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>basketBottom</string>
 							<string>basketTop</string>
-							<string>bug</string>
-							<string>newYearLogo</string>
+							<string>newyearLogo</string>
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
@@ -287,8 +285,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>basketBottom</string>
 							<string>basketTop</string>
-							<string>bug</string>
-							<string>newYearLogo</string>
+							<string>newyearLogo</string>
 						</object>
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -301,11 +298,7 @@
 								<string key="candidateClassName">UIImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">bug</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">newYearLogo</string>
+								<string key="name">newyearLogo</string>
 								<string key="candidateClassName">UIImageView</string>
 							</object>
 						</object>
@@ -341,6 +334,15 @@
 			<object class="NSArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{320, 235}</string>
+				<string>{320, 266}</string>
+				<string>{250, 156}</string>
+				<string>{266, 560}</string>
+			</object>
+		</object>
+		<string key="IBCocoaTouchPluginVersion">1930</string>
+	</data>
+</archive>
+, 235}</string>
 				<string>{320, 266}</string>
 				<string>{250, 156}</string>
 				<string>{266, 560}</string>
